Implemented get sensors
